# kiwitalk

./: CMakeLists.txt
include/: broadcast.h  config.h  parse_command.h  send.h  tab.h
src/: parse_command.c
src/client/: main.c  tab.c
src/client/tab/: .getinput.c.un~  command.c  getinput.c  getinput.c~  process.c  receive.c  tab.c
src/server/: broadcast.c  config.c  main.c  send.c
